# dithering

./: MANIFEST.in  README.md  clean.sh  dither.py  pyproject.toml  setup.py
.github/workflows/: pages-sync.yml  pylint.yml  python-publish.yml  sync-readme.yml
docs/: _config.yml  index.md
src/: __init__.py
src/adaptive_diffusion/: __init__.py  adaptive_dif.py
src/adaptive_diffusion/group/: __init__.py  ostromoukhov.py  zhou_fang.py
src/adaptive_diffusion/kernels/: __init__.py  load_kernel.py
src/adaptive_diffusion/kernels/data/: strengths_zhou_fang.txt  weights_ostromoukhov.txt
src/app/: __init__.py  cli.py  tasks.py  visualize.py
src/error_diffusion/: __init__.py  err_diff.py
src/error_diffusion/kernels/: __init__.py  kernels.py
src/error_diffusion/kernels/groups/: __init__.py  artistic.py  atkinson.py  burkes.py  classic.py  directional.py  experimental.py  fan.py  ktype.py  optimized.py  research.py  sierra.py  simple.py  variable_static.py
src/multi_level/: __init__.py  palette.py
src/multi_level/nearest/: __init__.py  near_color.py
src/naive/: __init__.py  threshold.py
src/naive/group/: __init__.py  globalg.py  mean.py  otsu.py  percentile.py
src/ordered/: __init__.py  ordered.py
src/ordered/group/: bayer.py  halftone.py  spot.py
src/random/: __init__.py  noise.py
src/random/group/: __init__.py  normal.py  uniform.py
src/random/mode/: __init__.py  additive.py  jitter.py
src/utils/: __init__.py  grayscale.py  prep_img.py
