[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dithering"
version = "0.1.0"
description = "Playground for ordered/adaptive/error-diffusion/multi-level/naive/ordered/random dithering algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "UNLICENSE"}
authors = [{ name = "justin-marian", email = "pmarianjustin@gmail.com" }]

# Runtime dependencies
dependencies = [
  "numpy>=2.0",
  "scipy>=1.10",
  "scikit-image>=0.25",
  "matplotlib>=3.8",
  "pillow>=11.3.0",
  "imageio>=2.31",
  "networkx>=3.0",
  "python-dateutil>=2.8.2",
  "packaging>=25.0",
]

[project.scripts]
dither = "dither:main"

# Optional developer tools
[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=25.1.0",
  "mypy>=1.7",
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  { include = "adaptive_diffusion", from = "src" },
  { include = "error_diffusion", from = "src" },
  { include = "multi_level", from = "src" },
  { include = "naive", from = "src" },
  { include = "ordered", from = "src" },
  { include = "random", from = "src" },
]

# Extra files to include alongside the wheel (not as packages)
# Note: these will be placed in the wheel root; adjust if you later
# move data under a packaged module.
[tool.hatch.build]
include = [
  "src/adaptive_diffusion/kernels/data/*.txt",
  "README.md",
  "LICENSE",
  "dither.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true
